--- a/app/user/dashboard/achievements/styles.css
+++ b/app/user/dashboard/achievements/styles.css
@@ -7,7 +7,7 @@
 }
 
 :local .achievements_container {
-    justify-content: space-around;
+    justify-content: left;
     flex-wrap: wrap;
     padding-left: 20px;
     padding-right: 20px;
@@ -15,7 +15,7 @@
 
 :local .achievement_container {
     flex-direction: column;
-    max-width: 150px;
+    max-width: 100%;
 }
 
 :local .thumbnail_container {
@@ -37,4 +37,18 @@
     font-style: italic;
     font-size: .8em;
     margin-top: 0;
+}
+
+@media only screen and (min-width: 700px) {
+    :local .achievements_container {
+        justify-content: left;
+        flex-wrap: wrap;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    :local .achievement_container {
+        max-width: 175px;
+        margin-left: 10px;
+    }
 }
