--- a/app/exercises/shared/audio_panel/styles.css
+++ b/app/exercises/shared/audio_panel/styles.css
@@ -2,10 +2,6 @@
     display: flex;
 }
 
-:local audio_panel {
-    justify-content: center;
-}
-
 /*---audio-panel---*/
 
 :local .audio_player,
@@ -13,27 +9,20 @@
     justify-content: center;
 }
 
-:local .player_img_container {
-    width: 250px;
+:local .audio_player {
+    flex-direction: column;
+    max-width: 250px;
 }
 
-:local .player_img {
+:local .audio_player img {
     width: 100%;
-    align-self: center;
 }
 
 :local .audio_controls {
     white-space: nowrap;
 }
 
-:local .btn_img {
-    width: 100%;
-}
-
 :local .audio_button {
-    background-color: #fffef3;
-    border-style: none;
-    border-width: 0px;
     height: 100px;
     width: 100px;
 }
