--- a/app/exercises/shared/exercise_header/styles.css
+++ b/app/exercises/shared/exercise_header/styles.css
@@ -7,33 +7,42 @@
 }
 
 :local .exercise_header_icons {
-    
     height: 75px;
+    margin: 20px auto;
 }
 
 :local .exercise_header_icons * {
     height: 100%;
 }
 
+:local .exercise_name {
+    font-size: 2.5em;
+    flex: 1;
+}
+:local .blue_text {
+    color: #33669a;
+    font-weight: lighter;
+}
 
 :local .header_icon {
     height: 75px;
     width: 75px;
+    margin-left: 10px;
 }
 
 :local .score_icon {
     margin-left: 10px;
-    
+
     border-style: solid;
     border-width: 2px;
     border-color: #475055;
-    border-radius: 50%;    
+    border-radius: 50%;
     width: 75px;
-    
+
 	line-height: 75px;
     text-align: center;
     font-size: 30pt;
-    font-weight: bold;	    
+    font-weight: bold;
 }
 
 @media only screen and (min-width: 700px) {
