added a dummy video on quiz page

--- a/app/exercises/quiz/styles.css
+++ b/app/exercises/quiz/styles.css
@@ -53,6 +53,14 @@
     flex: 1;
 }
 
+
+/*---Video panel---*/
+
+:local .video_panel {
+    width: 560px;
+    align-self: center;
+}
+
 /*---input-panel---*/
 
 :local .input_panel {
