--- a/app/exercises/transcription/tooltip/styles.css
+++ b/app/exercises/transcription/tooltip/styles.css
@@ -1,6 +1,3 @@
-:local * {
-    font-family: Pragmatica, Arial, Helvetica, sans-serif;
-}
 
 :local .flex_container {
     display: flex;
@@ -11,4 +8,8 @@
     margin-top: 10px;
     margin-bottom: 10px;
     color: #33669a;
+}
+
+:local .tooltip_text {
+    font-family: Arial, Helvetica, sans-serif;
 }
