--- a/app/home/home.css
+++ b/app/home/home.css
@@ -89,6 +89,7 @@
     color: #33669a;
     font-weight: lighter;
     margin-bottom: 10px;    
+    margin-top: 0;
   }
 
   :local .red_text {
@@ -156,19 +157,30 @@
     font-size: 3em;
     color: #475c64;
     font-weight: lighter;
+    margin: 0;
   }
   
  :local .detail_thumbnail {
     border-style: solid;
     border-width: 1px;
     border-color: #475c64;
+    
+    background-color: #fffef3;
     height: 200px;
-    margin-bottom: 20px;
+    width: 300px;
+    margin-bottom: 10px;
+  }
+
+  :local .blueButton {
+    margin-top: 30px;
+    background-color: #fe4a49;
+    color: #fffef3;
+    font-weight: bold;
   }
   
   /*---Media Queries---*/
   
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 800px) {
     
    :local .full_height {
       padding: 6%;
@@ -184,6 +196,10 @@
       max-width: 300px;
       padding-left: 10px;
       padding-right: 10px;
+    }
+
+    :local .detail {
+      width: 300px;
     }
     
   }
