--- a/app/exercises/transcription/styles.css
+++ b/app/exercises/transcription/styles.css
@@ -56,9 +56,9 @@
     justify-content: center;
 }
 
-:local .audio_player,
-:local .audio_controls {
+:local .audio_player {
     justify-content: center;
+    width: 100%;
 }
 
 @media only screen and (min-width: 700px) {
