--- a/app/exercises/transcription/tooltip/styles.css
+++ b/app/exercises/transcription/tooltip/styles.css
@@ -12,4 +12,9 @@
 
 :local .tooltip_text {
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 20px;
+}
+
+:local .incorrect_answer {
+    color: #fe4a49;
 }
